# hermes-agent

./: .gitignore  autoclys_keylogger_bridge.js  autoclys_observer.py  autoclys_runtime.py  hermes_desktop_service.py  keylogger_mac.mm  model_tools.py  package.json  pyproject.toml  toolsets.py
apps/hermes-desktop/: README.md  dev-server.mjs  dev.mjs
apps/hermes-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/hermes-desktop/src-tauri/src/: lib.rs
apps/hermes-desktop/src-ui/: app.js  index.html  main.css
autoclys_keylogger/: binding.gyp  index.js  package.json
autoclys_keylogger/native/: keylogger.cc  keylogger_linux.cc  keylogger_mac.mm  keylogger_win.cc
autoclys_keylogger/src/: keylogger.js
scripts/: setup_autoclys_keylogger.mjs
tests/: test_autoclys_observer.py  test_hermes_desktop_service.py  test_model_tools.py
tests/tools/: test_desktop_control_tool.py  test_observer_tools.py
tools/: desktop_control_tool.py  observer_tools.py
